Fixed alignment issues on other screens

--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,10 @@
 }
 @media (max-width: 1100px) {
     .project-image-description {
-        flex-direction: column;
+        flex-direction: column !important;
     }
     .project-image-container {
-        margin: 10px auto;
+        margin: 10px auto !important;
     }
     .stage-text {
         flex-direction: column;
@@ -47,6 +47,15 @@
         max-height: 350px !important;
         min-height: 350px !important;
         background-color: var(--tertiary-dark-color);
+    }
+    .text {
+        text-align: center !important;
+        margin-bottom: 15px !important;
+        margin-top: 0 !important;
+    }
+    .text-top {
+        margin-top: 0 !important;
+        margin-bottom: 15px !important;
     }
 }
 @media (min-width: 1101px) {
@@ -586,7 +595,7 @@ body {
 .img-scroll-container {
     display: flex;
     flex-direction: row;
-    margin: auto auto 20px auto;
+    margin: auto auto auto auto;
     z-index: 100;
     position: relative;
     top: -10px;
@@ -623,6 +632,10 @@ body {
     z-index: 4;
 }
 .text-top {
+    margin-top: 15px;
+}
+.text-middle {
+    margin-bottom: 15px;
     margin-top: 15px;
 }
 .text {
